crates/hoocode-code-main/tests/snapshots/replay__print-tool-edit-light.snap
---
source: crates/hoocode-code-main/tests/replay.rs
description: "recorded from hoocode a6cd96e7 by harness.py record; never accept hoocode output here"
expression: print-tool-edit-light
---
## exit
0

## stdout
Edited two lines, one edit missed, wrote out/new.txt.

## stderr


## requests
[
 {
  "messages": [
   {
    "content": "You are a coding agent. Use the tools to read, edit, and write files and run shell commands.\nSearch with bash (rg/find/ls). Prefer edit for changes; write for new files.\nBe concise. No preamble.\n\nCurrent date: <DATE>\nCurrent working directory: <WORK>",
    "role": "system"
   },
   {
    "content": [
     {
      "text": "edit the notes",
      "type": "text"
     }
    ],
    "role": "user"
   }
  ],
  "tools": [
   {
    "function": {
     "description": "Read a file. args: path, offset?, limit?",
     "name": "read",
     "parameters": {
      "properties": {
       "limit": {
        "type": "number"
       },
       "offset": {
        "type": "number"
       },
       "path": {
        "type": "string"
       }
      },
      "required": [
       "path"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   },
   {
    "function": {
     "description": "Write file (overwrites). args: path, content",
     "name": "write",
     "parameters": {
      "properties": {
       "content": {
        "type": "string"
       },
       "path": {
        "type": "string"
       }
      },
      "required": [
       "path",
       "content"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   },
   {
    "function": {
     "description": "Replace exact text. args: path, oldText, newText",
     "name": "edit",
     "parameters": {
      "properties": {
       "newText": {
        "type": "string"
       },
       "oldText": {
        "type": "string"
       },
       "path": {
        "type": "string"
       }
      },
      "required": [
       "path",
       "oldText",
       "newText"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   },
   {
    "function": {
     "description": "Run a shell command. args: command, timeout?",
     "name": "bash",
     "parameters": {
      "properties": {
       "command": {
        "type": "string"
       },
       "timeout": {
        "type": "number"
       }
      },
      "required": [
       "command"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   }
  ]
 },
 {
  "messages": [
   {
    "content": "You are a coding agent. Use the tools to read, edit, and write files and run shell commands.\nSearch with bash (rg/find/ls). Prefer edit for changes; write for new files.\nBe concise. No preamble.\n\nCurrent date: <DATE>\nCurrent working directory: <WORK>",
    "role": "system"
   },
   {
    "content": [
     {
      "text": "edit the notes",
      "type": "text"
     }
    ],
    "role": "user"
   },
   {
    "content": "Editing.",
    "role": "assistant",
    "tool_calls": [
     {
      "function": {
       "arguments": "{\"path\":\"notes.txt\",\"oldText\":\"alpha\",\"newText\":\"ALPHA\"}",
       "name": "edit"
      },
      "id": "call_edit_1",
      "type": "function"
     },
     {
      "function": {
       "arguments": "{\"path\":\"notes.txt\",\"oldText\":\"  beta 'x'\",\"newText\":\"  beta 'y'\"}",
       "name": "edit"
      },
      "id": "call_edit_2",
      "type": "function"
     },
     {
      "function": {
       "arguments": "{\"path\":\"notes.txt\",\"oldText\":\"delta\",\"newText\":\"DELTA\"}",
       "name": "edit"
      },
      "id": "call_edit_3",
      "type": "function"
     },
     {
      "function": {
       "arguments": "{\"path\":\"out/new.txt\",\"content\":\"fresh\\n\"}",
       "name": "write"
      },
      "id": "call_write_1",
      "type": "function"
     }
    ]
   },
   {
    "content": "Successfully replaced 1 block(s) in notes.txt.",
    "role": "tool",
    "tool_call_id": "call_edit_1"
   },
   {
    "content": "Successfully replaced 1 block(s) in notes.txt.",
    "role": "tool",
    "tool_call_id": "call_edit_2"
   },
   {
    "content": "Could not find the exact text in notes.txt. The old text must match exactly including all whitespace and newlines.",
    "role": "tool",
    "tool_call_id": "call_edit_3"
   },
   {
    "content": "Successfully wrote 6 bytes to out/new.txt",
    "role": "tool",
    "tool_call_id": "call_write_1"
   }
  ],
  "tools": [
   {
    "function": {
     "description": "Read a file. args: path, offset?, limit?",
     "name": "read",
     "parameters": {
      "properties": {
       "limit": {
        "type": "number"
       },
       "offset": {
        "type": "number"
       },
       "path": {
        "type": "string"
       }
      },
      "required": [
       "path"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   },
   {
    "function": {
     "description": "Write file (overwrites). args: path, content",
     "name": "write",
     "parameters": {
      "properties": {
       "content": {
        "type": "string"
       },
       "path": {
        "type": "string"
       }
      },
      "required": [
       "path",
       "content"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   },
   {
    "function": {
     "description": "Replace exact text. args: path, oldText, newText",
     "name": "edit",
     "parameters": {
      "properties": {
       "newText": {
        "type": "string"
       },
       "oldText": {
        "type": "string"
       },
       "path": {
        "type": "string"
       }
      },
      "required": [
       "path",
       "oldText",
       "newText"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   },
   {
    "function": {
     "description": "Run a shell command. args: command, timeout?",
     "name": "bash",
     "parameters": {
      "properties": {
       "command": {
        "type": "string"
       },
       "timeout": {
        "type": "number"
       }
      },
      "required": [
       "command"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   }
  ]
 },
 {
  "messages": [
   {
    "content": "You are a coding agent. Use the tools to read, edit, and write files and run shell commands.\nSearch with bash (rg/find/ls). Prefer edit for changes; write for new files.\nBe concise. No preamble.\n\nCurrent date: <DATE>\nCurrent working directory: <WORK>",
    "role": "system"
   },
   {
    "content": [
     {
      "text": "edit the notes",
      "type": "text"
     }
    ],
    "role": "user"
   },
   {
    "content": "Editing.",
    "role": "assistant",
    "tool_calls": [
     {
      "function": {
       "arguments": "{\"path\":\"notes.txt\",\"oldText\":\"alpha\",\"newText\":\"ALPHA\"}",
       "name": "edit"
      },
      "id": "call_edit_1",
      "type": "function"
     },
     {
      "function": {
       "arguments": "{\"path\":\"notes.txt\",\"oldText\":\"  beta 'x'\",\"newText\":\"  beta 'y'\"}",
       "name": "edit"
      },
      "id": "call_edit_2",
      "type": "function"
     },
     {
      "function": {
       "arguments": "{\"path\":\"notes.txt\",\"oldText\":\"delta\",\"newText\":\"DELTA\"}",
       "name": "edit"
      },
      "id": "call_edit_3",
      "type": "function"
     },
     {
      "function": {
       "arguments": "{\"path\":\"out/new.txt\",\"content\":\"fresh\\n\"}",
       "name": "write"
      },
      "id": "call_write_1",
      "type": "function"
     }
    ]
   },
   {
    "content": "Successfully replaced 1 block(s) in notes.txt.",
    "role": "tool",
    "tool_call_id": "call_edit_1"
   },
   {
    "content": "Successfully replaced 1 block(s) in notes.txt.",
    "role": "tool",
    "tool_call_id": "call_edit_2"
   },
   {
    "content": "Could not find the exact text in notes.txt. The old text must match exactly including all whitespace and newlines.",
    "role": "tool",
    "tool_call_id": "call_edit_3"
   },
   {
    "content": "Successfully wrote 6 bytes to out/new.txt",
    "role": "tool",
    "tool_call_id": "call_write_1"
   },
   {
    "content": "Let me check.",
    "role": "assistant",
    "tool_calls": [
     {
      "function": {
       "arguments": "{\"path\":\"notes.txt\"}",
       "name": "read"
      },
      "id": "call_read_1",
      "type": "function"
     }
    ]
   },
   {
    "content": "ALPHA\n\tbeta 'y'\ngamma\n",
    "role": "tool",
    "tool_call_id": "call_read_1"
   }
  ],
  "tools": [
   {
    "function": {
     "description": "Read a file. args: path, offset?, limit?",
     "name": "read",
     "parameters": {
      "properties": {
       "limit": {
        "type": "number"
       },
       "offset": {
        "type": "number"
       },
       "path": {
        "type": "string"
       }
      },
      "required": [
       "path"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   },
   {
    "function": {
     "description": "Write file (overwrites). args: path, content",
     "name": "write",
     "parameters": {
      "properties": {
       "content": {
        "type": "string"
       },
       "path": {
        "type": "string"
       }
      },
      "required": [
       "path",
       "content"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   },
   {
    "function": {
     "description": "Replace exact text. args: path, oldText, newText",
     "name": "edit",
     "parameters": {
      "properties": {
       "newText": {
        "type": "string"
       },
       "oldText": {
        "type": "string"
       },
       "path": {
        "type": "string"
       }
      },
      "required": [
       "path",
       "oldText",
       "newText"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   },
   {
    "function": {
     "description": "Run a shell command. args: command, timeout?",
     "name": "bash",
     "parameters": {
      "properties": {
       "command": {
        "type": "string"
       },
       "timeout": {
        "type": "number"
       }
      },
      "required": [
       "command"
      ],
      "type": "object"
     },
     "strict": false
    },
    "type": "function"
   }
  ]
 }
]

## session 1/1
{"type":"session","version":3,"id":"<id-1>","timestamp":"<masked>","cwd":"<WORK>"}
{"type":"model_change","id":"<id-2>","parentId":null,"timestamp":"<masked>","provider":"mock","modelId":"mock-model"}
{"type":"thinking_level_change","id":"<id-3>","parentId":"<id-2>","timestamp":"<masked>","thinkingLevel":"off"}
{"type":"message","id":"<id-4>","parentId":"<id-3>","timestamp":"<masked>","message":{"role":"user","content":[{"type":"text","text":"edit the notes"}],"timestamp":"<masked>"}}
{"type":"message","id":"<id-5>","parentId":"<id-4>","timestamp":"<masked>","message":{"role":"assistant","content":[{"type":"text","text":"Editing."},{"type":"toolCall","id":"call_edit_1","name":"edit","arguments":{"path":"notes.txt","oldText":"alpha","newText":"ALPHA"}},{"type":"toolCall","id":"call_edit_2","name":"edit","arguments":{"path":"notes.txt","oldText":"  beta 'x'","newText":"  beta 'y'"}},{"type":"toolCall","id":"call_edit_3","name":"edit","arguments":{"path":"notes.txt","oldText":"delta","newText":"DELTA"}},{"type":"toolCall","id":"call_write_1","name":"write","arguments":{"path":"out/new.txt","content":"fresh\n"}}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"toolUse","timestamp":"<masked>","responseId":"chatcmpl-mock"}}
{"type":"message","id":"<id-6>","parentId":"<id-5>","timestamp":"<masked>","message":{"role":"toolResult","toolCallId":"call_edit_1","toolName":"edit","content":[{"type":"text","text":"Successfully replaced 1 block(s) in notes.txt."}],"details":{"diff":"-1 alpha\n+1 ALPHA\n 2 \tbeta ‘x’\n 3 gamma","firstChangedLine":1},"isError":false,"timestamp":"<masked>"}}
{"type":"message","id":"<id-7>","parentId":"<id-6>","timestamp":"<masked>","message":{"role":"toolResult","toolCallId":"call_edit_2","toolName":"edit","content":[{"type":"text","text":"Successfully replaced 1 block(s) in notes.txt."}],"details":{"diff":" 1 ALPHA\n-2 \tbeta ‘x’\n+2 \tbeta 'y'\n 3 gamma","firstChangedLine":2},"isError":false,"timestamp":"<masked>"}}
{"type":"message","id":"<id-8>","parentId":"<id-7>","timestamp":"<masked>","message":{"role":"toolResult","toolCallId":"call_edit_3","toolName":"edit","content":[{"type":"text","text":"Could not find the exact text in notes.txt. The old text must match exactly including all whitespace and newlines."}],"details":{},"isError":true,"timestamp":"<masked>"}}
{"type":"message","id":"<id-9>","parentId":"<id-8>","timestamp":"<masked>","message":{"role":"toolResult","toolCallId":"call_write_1","toolName":"write","content":[{"type":"text","text":"Successfully wrote 6 bytes to out/new.txt"}],"isError":false,"timestamp":"<masked>"}}
{"type":"message","id":"<id-10>","parentId":"<id-9>","timestamp":"<masked>","message":{"role":"assistant","content":[{"type":"text","text":"Let me check."},{"type":"toolCall","id":"call_read_1","name":"read","arguments":{"path":"notes.txt"}}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"toolUse","timestamp":"<masked>","responseId":"chatcmpl-mock"}}
{"type":"message","id":"<id-11>","parentId":"<id-10>","timestamp":"<masked>","message":{"role":"toolResult","toolCallId":"call_read_1","toolName":"read","content":[{"type":"text","text":"ALPHA\n\tbeta 'y'\ngamma\n"}],"isError":false,"timestamp":"<masked>"}}
{"type":"message","id":"<id-12>","parentId":"<id-11>","timestamp":"<masked>","message":{"role":"assistant","content":[{"type":"text","text":"Edited two lines, one edit missed, wrote out/new.txt."}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"stop","timestamp":"<masked>","responseId":"chatcmpl-mock"}}
